--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -36,10 +36,10 @@
             {% for p in publications %}
                 <div class="index-item row">
                     {% if p.preview.path is defined %}
-                        <div class="col-xs-2">
+                        <div class="col-xs-3" style="padding-right: 0">
                             <img src="{{ p.preview.path }}" class="img-thumbnail">
                         </div>
-                        <div class="col-xs-10">
+                        <div class="col-xs-9">
                             <div class="item-title"><a href="{{ path('publications',{'url' : p.id }) }}" style="color: #222">{{ p.title }}</a></div>
                             <div class="item-anons">
                                 {{ p.anons }}
