--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -14,7 +14,7 @@
         <ul class="nav navbar-nav">
             <li {{ app.request.attributes.get('_route') == 'news' or app.request.attributes.get('_route') == 'homepage' ? 'class="active"' : ''}} ><a href="{{ path('news') }}">НОВОСТИ</a></li>
             <li {{ app.request.pathInfo == '/events' or app.request.pathInfo == '/events/russian-events' or app.request.pathInfo == '/events/foreign-events' ? 'class="active"' : ''}} >
-                <a href="{{ path('events') }}">Мероприятия</a>
+                <a href="{{ path('events_map') }}">Мероприятия</a>
                 <div class="submenu">
                     <ul class="submenu-items">
                         <li><a href="{{ path('events',{'url': 'russian-events'}) }}">Российские</a></li>
