--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -6,8 +6,6 @@
     <link rel="canonical" href="https://medalmanah.ru{{ app.request.pathInfo }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="ed498bae1f81c4b1" />
-    <meta name="wot-verification" content="2e58572c7f4a1eb87c60"/>
-
 
     <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('bundles/app/images/favicons/apple-icon-57x57.png') }}">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('bundles/app/images/favicons/apple-icon-60x60.png') }}">
@@ -29,31 +27,19 @@
 
     {% block social %}{% endblock %}
     {% block javascript %}
-        <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
-
-        {% javascripts
-            'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
-            'assets/vendor/owl.carousel/dist/owl.carousel.min.js'
-            'assets/vendor/chosen/chosen.jquery.min.js'
-            'assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js'
-            'assets/vendor/hinclude/hinclude.js'
-            'bundles/app/js/main.js'
-        filter='uglifyjs2' %}
-        <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
-        <script src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>
         <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
-        {#<script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>#}
-        {#<script src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>#}
-        {#<script src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>#}
+        <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
+        <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>
+        <script src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>
+        <script src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>
 
+        <script src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>
 
-        {#<script src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>#}
+        <script src="{{ asset('assets/vendor/hinclude/hinclude.js') }}"></script>
 
-        {#<script src="{{ asset('assets/vendor/hinclude/hinclude.js') }}"></script>#}
-
-        {#<script src="{{ asset('bundles/app/js/main.js') }}"></script>#}
+        <script src="{{ asset('bundles/app/js/main.js') }}"></script>
 
         <script>
             $(document).ready(function() {
